2008-02-15  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/youtube/youtube.py: Fix YouTube searches which
	produce no results. (Closes: #516236)

2008-02-14  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemConePlugin.cpp:
	* browser-plugin/totemConePlugin.h:
	Implement stubs for the Audio and Video objects

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_stop): Fix warning when _stop()
	is called in logo mode

2008-02-14  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/org_gnome_totem_PluginViewer.xml:
	* browser-plugin/totem-plugin-viewer.c: (totem_pl_item_free),
	(totem_embedded_clear_playlist), (totem_embedded_add_item),
	(totem_embedded_open_uri), (totem_embedded_open_stream),
	(totem_embedded_set_local_file), (totem_embedded_set_playlist),
	(totem_embedded_push_parser):
	* browser-plugin/totemPlugin.h:
	* browser-plugin/totemPlugin.cpp: Implement ClearPlaylist
	and AddItem, to manipulate the playlist

	* browser-plugin/idl/totemIConePlaylist.idl: Fix prototype
	for add

	* browser-plugin/totemConePlugin.cpp: Implement ::Add,
	and ::Clear

	* browser-plugin/totemPluginGlue.cpp: Fix a compilation
	warning

2008-02-13  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/idl/Makefile.am:
	* browser-plugin/idl/totemIConeAudio.idl:
	* browser-plugin/idl/totemIConeInput.idl:
	* browser-plugin/idl/totemIConePlaylist.idl:
	* browser-plugin/idl/totemIConePlaylistItems.idl:
	* browser-plugin/idl/totemIConeVideo.idl:
	Update the IDL for VLC 0.8.6 and above

	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_open_uri),
	(totem_embedded_open_stream), (totem_embedded_update_menu):
	Add more debug for some remote functions, and try to use
	the stream_uri when it's available

	* browser-plugin/totemConePlugin.cpp:
	* browser-plugin/totemConePlugin.h: Implement stubs for
	Playlist and PlaylistItems objects

2008-02-13  Bastien Nocera  <hadess@hadess.net>
